Fixed screen aspect ratio on mobiles.

--- a/contact/contact.css
+++ b/contact/contact.css
@@ -121,25 +121,47 @@ p {
     }
 }
 
-@media only screen and (width: 600px) {
-    form {
-        margin-top: 0rem;
-        position: block;
-        width: 300px;
+@media only screen and (width: 640px) {
+    h1, contact-form {
+        height: 22px;
+        margin-top: 1px;
     }
 }
 
+@media only screen and (width: 640px) {
+    h1, contact-form {
+        height: 22px;
+        margin-top: 1px;
+    }
+}
+
+@media only screen and (width: 240px) {
+    h1 {
+        font-size: 1.6rem;
+        margin-top: 1rem;
+    }
+}
+
+@media only screen and (width: 320px) {
+    form {
+        margin-bottom: 1rem;
+        position: block;
+        height: 15rem;
+        width: 100px;
+    }
+}
+
+@media only screen and (width: 640px) {
+    form {
+        height: 215px;
+    }
+}
 @media only screen and (width: 360px) {
     h1, contact-form {
         margin-top: 30px;
     }
 }
 
-@media only screen and (width: 320px) {
-    h1, contact-form {
-        margin-top: 010px;
-    }
-}
 @media only screen and (max-width: 470px) {
     form {
         position: block;
@@ -147,10 +169,53 @@ p {
     }
 }
 
+@media only screen and (width: 600px) {
+    label {
+        position: inline;
+        width: 90px;
+    }
+}
+
+@media only screen and (width: 240px) {
+    label {
+        font-size: 16px;
+        position: inline;
+        width: 1px;
+    }
+}
+
+@media only screen and (width: 412px) {
+    label {
+        margin-right: 0rem;
+        width: 100px;
+    }
+}
+
+@media only screen and (max-width: 280px) {
+    label {
+        position: inline-flex;
+        width: 50px;
+    }
+}
+
 @media only screen and (max-width: 470px) {
     label {
-        position: block;
+        position: inline-flex;
         width: 50px;
+    }
+}
+
+@media only screen and (width: 384px) {
+    label {
+        position: inline-flex;
+        width: 1px;
+    }
+}
+
+@media only screen and (max-width: 360px) {
+    label {
+        position: inline-flex;
+        width: 1px;
     }
 }
 
@@ -215,6 +280,15 @@ p {
     }
 }
 
+@media only screen and (width: 240px) {
+    input,
+    textarea {
+        width: 175px;
+        margin-right: 50px;
+        height: 1rem;
+    }
+}
+
 @media only screen and (max-width: 221px) {
 
     input,
@@ -239,6 +313,13 @@ p {
     }
 }
 
+@media only screen and (width: 320px) {
+    input,
+    textarea {
+        width: 200px;
+    }
+}
+
 @media only screen and (max-width: 300px) {
     form {
         width: 200px;
@@ -253,13 +334,14 @@ p {
 
 @media only screen and (width: 320px) {
     form {
-        width: 250px;
+        width: 200px;
     }
 }
 
 @media only screen and (width: 240px) {
     form {
-        width: 160px;
+        max-height: 180px;
+        max-width: 170px;
     }
 }
 
@@ -337,12 +419,12 @@ p {
     }
 }
 
-@media only screen and (max-width: 353px) {
+@media only screen and (width: 353px) {
     .button {
         padding: 10px;
         width: 200px;
         display: inline-block;
-        margin: 10px;
+        margin-left: 50px;
         cursor: pointer;
         border-radius: 4px;
     }
@@ -353,7 +435,18 @@ p {
         padding: 10px;
         width: 200px;
         display: block;
-        margin-left: 3rem;
+        margin-left: 1.5rem;
+        cursor: pointer;
+        border-radius: 4px;
+    }
+}
+
+@media only screen and (width: 280px) {
+    .button {
+        padding: 1px;
+        width: 200px;
+        display: inline-block;
+        margin-left: 35px;
         cursor: pointer;
         border-radius: 4px;
     }
@@ -365,6 +458,17 @@ p {
         width: 200px;
         display: inline-block;
         margin: 10px;
+        cursor: pointer;
+        border-radius: 4px;
+    }
+}
+
+@media only screen and (width: 240px) {
+    .button {
+        padding: 1px;
+        width: 200px;
+        display: inline-block;
+        margin-left: 20px;
         cursor: pointer;
         border-radius: 4px;
     }
@@ -392,9 +496,41 @@ p {
     }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (width: 600px) {
+    .button {
+        padding: 10px;
+        width: 150px;
+        margin-left: 75px;
+        display: inline-block;
+        cursor: pointer;
+        border-radius: 4px;
+    }
+}
+
+@media only screen and (width: 640px) {
+    .button {
+        margin-left: 50px;
+        width: 200px;
+        display: block;
+        cursor: pointer;
+        border-radius: 4px;
+    }
+}
+
+@media only screen and (max-width: 1024px) {
     .footer {
         display: none;
     }
 }
 
+@media only screen and (width: 320px) {
+    .Socials-links {
+        margin-top: 1px;
+    }
+}
+
+@media only screen and (width: 640px) {
+    .Socials-links {
+        margin-top: 1px;
+    }
+}
